# curs3d

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  avancement.md  docker-compose.yml  todo.md  whitepaper.md
.github/workflows/: ci.yml
benches/: blockchain_bench.rs
deploy/: DEPLOY_RUNBOOK.md  DEPLOY_VPS.md  docker-compose.public.yml
deploy/env/: node.env  node.env.example
deploy/nginx/: curs3d.conf
deploy/scripts/: add-node.sh  deploy.sh
deploy/systemd/: curs3d.service
docs/: L1_TODO.md  README.md
docs/branding/: 01-brand-core.md  02-slogans.md  03-positioning-messaging.md  04-voice-tone.md  05-visual-identity.md  06-verbal-assets.md  07-website-copy.md  08-investor-brand.md  09-social-community.md  10-brand-guardrails.md  11-launch-checklist.md  README.md
docs/foundation/: 00-executive-summary.md  01-curs3d-thesis.md  02-category-and-market.md  03-product-and-protocol.md  04-security-and-threat-model.md  05-adoption-and-ecosystem.md  06-tokenomics-framework.md  07-governance-framework.md  08-fundraising-readiness.md  09-regulatory-and-operational-risk.md  10-mainnet-credibility-checklist.md  11-faq-hard-questions.md  12-kpi-framework.md  13-litepaper.md  14-investor-deck-outline.md  15-mainnet-readiness-plan.md  16-validator-operator-brief.md  17-token-project-playbook.md  18-press-kit.md  19-data-room-checklist.md  20-document-governance.md  README.md
explorer/: script.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_deser.rs  fuzz_merkle_proof.rs  fuzz_network_message.rs  fuzz_rpc_parsing.rs  fuzz_transaction_deser.rs
sdk/javascript/: package.json  tsconfig.json
sdk/python/: pyproject.toml
sdk/python/curs3d/: __init__.py  client.py
src/: lib.rs  main.rs
src/api/: mod.rs
src/consensus/: mod.rs
src/core/: block.rs  blocktree.rs  chain.rs  mod.rs  receipt.rs  state_proof.rs  transaction.rs
src/crypto/: dilithium.rs  hash.rs  mod.rs
src/governance/: mod.rs
src/light/: mod.rs
src/network/: mod.rs
src/rpc/: mod.rs
website/: docs.html  examples.html  explorer.html  governance.html  index.html  script.js  stack.html  style.css  tokenomics.html  whitepaper.html
(+11 files in other folders)
