[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "curs3d"
version = "0.1.0"
description = "Python SDK for the CURS3D quantum-resistant blockchain"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
